2004-08-06 Chris Taylor  <c.taylor@student.curtin.edu.au>

	* main/gamesave.c: fix a bug introduced with change of 2004-06-26

2004-08-06 Chris Taylor  <c.taylor@student.curtin.edu.au>

	* include/strio.h, include/strutil.h, misc/args.c, misc/strio.c,
	misc/strutil.c: d2x can now handle any line ending when reading d2x.ini

	* arch/ogl/gr.c, cfile/cfile.c, main/movie.c: make d2x compile (but not
	link) on MPW on Mac OS 9 (carbon)

	* include/mono.h: disable mprintf on carbon to avoid significant bloat

	* include/error.h: on Mac OS 9 and X, define Int3 to be a Debugger

2004-08-04 Chris Taylor  <c.taylor@student.curtin.edu.au>

	* include/ogl_init.h: Include glu.h on OS X, it is sometimes necessary

2004-08-02  Martin Schaffner  <maschaffner@gmx.ch>

	* include/pstypes.h: Now, I correctly applied Chris Taylor's patch

2004-08-01  Chris Taylor  <c.taylor@student.curtin.edu.au>

	* 2d/font.c, arch/ogl/gr.c, arch/ogl/ogl.c, mem/mem.c,
	include/d_io.h, include/pstypes.h, include/u_dpmi.h,
	libmve/mvelib.c, libmve/mveplay.c, main/cntrlcen.c, main/gameseq.c,
	main/movie.c, main/newmenu.c, main/playsave.c, main/songs.c,
	main/state.c, main/text.c: add "#ifdef macintosh" for carbon target

	* D2X.make, arch/include/gui.h, arch/carbon/gui.c, arch/carbon/conf.h,
	arch/carbon/findfile.c,	arch/carbon/SDL_main.c, arch/carbon/descent.r:
	new files for supporting compilation with MPW for carbon (Mac OS 9)

	* include/strutil.h, misc/strutil.c: add str(n)icmp for carbon

	* main/playsave.c: do not seek while writing, carbon does not like it

	* arch/ogl/gr.c: use portable CFILE instead of POSIX file in write_bmp

	* cfile/cfile.c: use portable ffilelength in cfile_size

	* 2d/bitblt.c, 2d/font.c, 2d/rle.c, arch/ogl/gr.c, iff/iff.c,
	main/inferno.c, main/kconfig.c, main/multi.c, main/multibot.c,
	main/netmisc.c, main/newdemo.c, mem/mem.c: avoid assigments between
	unsigned and signed char, MPW does not like these

2004-06-26  Chris Taylor  <c.taylor@student.curtin.edu.au>
